raffia/tests/error/value/url/qoutes.snap
---
source: raffia/tests/error.rs
---
error: invalid URL
  ┌─ qoutes.css:2:19
  │
2 │   background: url(a"b");
  │                   ^


